--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "@types/react": "~18.3.12"
   },
   "name": "gerald-assignment",
   "version": "1.0.0",
